kubernetes/ledger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments-platform
  labels:
    name: payments-platform
    environment: development
